--- a/DuAn1_QuanLyQuanTraChanh/src/views/JFrameAnh.form
+++ b/DuAn1_QuanLyQuanTraChanh/src/views/JFrameAnh.form
@@ -70,7 +70,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="cbb_hoatdong" min="-2" pref="150" max="-2" attributes="0"/>
+                                  <Component id="cbb_trangthai" min="-2" pref="150" max="-2" attributes="0"/>
                               </Group>
                               <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                                   <Component id="cbb_sanpham" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
@@ -110,7 +110,7 @@
                   </Group>
                   <EmptySpace pref="19" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="cbb_hoatdong" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cbb_trangthai" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -258,11 +258,11 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JComboBox" name="cbb_hoatdong">
+        <Component class="javax.swing.JComboBox" name="cbb_trangthai">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
-                <StringItem index="0" value="Ho&#x1ea1;t &#x111;&#x1ed9;ng "/>
+                <StringItem index="0" value="Ho&#x1ea1;t &#x111;&#x1ed9;ng"/>
                 <StringItem index="1" value="Ng&#x1eeb;ng ho&#x1ea1;t &#x111;&#x1ed9;ng"/>
               </StringArray>
             </Property>
